--- a/composer.json
+++ b/composer.json
@@ -1,146 +1,153 @@
 {
-    "minimum-stability": "dev",
-    "name": "robvanaarle/aviko_tournament_schedule",
-    "description": "Web application to create and view schedules for the Aviko Tournament.",
-    "type": "project",
-    "keywords": [
-        "Aviko",
-        "Tournament",
-        "Schedule"
-    ],
-    "license": "BSD-3-Clause",
-    "authors": [
-	  		{
-	    	  "name": "Rob van Aarle"
-	  		}
-	  ],
-    "repositories": [
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-mvc"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-error"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-phptpl"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-phptpl-mvc"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-acl"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-acl-mvc"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-session"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-validation"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-mvc"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-http"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-config"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-config-mvc"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-form"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-form-mvc"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-locale"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-locale-mvc"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-translate"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-translate-mvc"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-orm"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-orm-mvc"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-html"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-css"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-slug"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-filemtimecache"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ultimo-cache"
-      	},
-      	{
-        	"type": "vcs",
-        	"url": "https://github.com/robvanaarle/ucms-user"
-      	}
-    ],
-    "require": {
-        "robvanaarle/ultimo-mvc": "dev-master",
-        "robvanaarle/ultimo-error": "dev-master",
-        "robvanaarle/ultimo-form-mvc": "dev-master",
-        "robvanaarle/ultimo-acl-mvc": "dev-master",
-        "robvanaarle/ultimo-config-mvc": "dev-master",
-        "robvanaarle/ultimo-locale-mvc": "dev-master",
-        "robvanaarle/ultimo-translate-mvc": "dev-master",
-        "robvanaarle/ultimo-orm-mvc": "dev-master",
-        "robvanaarle/ultimo-filemtimecache": "dev-master",
-        "robvanaarle/ucms-user": "dev-master",
-        "mrclay/minify": "2.2.*"
+  "minimum-stability": "dev",
+  "name": "robvanaarle/aviko_tournament_schedule",
+  "description": "Web application for planning the tournament 'Aviko Cup'",
+  "type": "project",
+  "keywords": [
+    "Aviko",
+    "Aviko Cup",
+    "SIOL",
+    "Cuijk",
+    "Tournament",
+    "Schedule",
+    "Planner"
+  ],
+  "license": "BSD-3-Clause",
+  "authors": [
+    {
+      "name": "Rob van Aarle"
+    }
+  ],
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-mvc"
     },
-    "require-dev": {
-      "phpunit/phpunit": "3.7.*"
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-error"
     },
-    "autoload": {
-    		"psr-4": {
-       			"modules\\": "modules/",
-       			"ats\\": "library/php/ats/"
-    		}
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-phptpl"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-mvc-phptpl"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-acl"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-mvc-acl"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-session"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-validation"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-http"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-config"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-mvc-config"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-form"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-mvc-form"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-locale"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-mvc-locale"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-translate"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-mvc-translate"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-orm"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-mvc-orm"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-html"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-css"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-slug"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-filemtimecache"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ultimo-cache"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ucms-user"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/robvanaarle/ucms-tournamentplanner"
+    }
+  ],
+  "require": {
+    "robvanaarle/ultimo-mvc": "dev-master",
+    "robvanaarle/ultimo-error": "dev-master",
+    "robvanaarle/ultimo-mvc-form": "dev-master",
+    "robvanaarle/ultimo-mvc-phptpl": "dev-master",
+    "robvanaarle/ultimo-mvc-config": "dev-master",
+    "robvanaarle/ultimo-mvc-locale": "dev-master",
+    "robvanaarle/ultimo-mvc-translate": "dev-master",
+    "robvanaarle/ultimo-mvc-orm": "dev-master",
+    "robvanaarle/ultimo-filemtimecache": "dev-master",
+    "robvanaarle/ucms-user": "dev-master",
+    "robvanaarle/ucms-tournamentplanner": "dev-master",
+    "mrclay/minify": "2.2.*",
+    "php": ">=5.3"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "3.7.*"
+  },
+  "minimum-stability": "dev",
+  "autoload": {
+    "psr-4": {
+      "modules\\": "modules/",
+      "ats\\": "library/php/ats/"
+    }
   }
 }
 
